--- a/resize/resize2fs.8.in
+++ b/resize/resize2fs.8.in
@@ -129,10 +129,11 @@ Shrink the file system to minimize its size as much as possible,
 given the files stored in the file system.
 .TP
 .B \-p
-Prints out a percentage completion bars for each
+Print out percentage completion bars for each
 .B resize2fs
-operation during an offline resize, so that the user can keep track
-of what the program is doing.
+phase during an offline (non-trivial) resize operation, so that the user
+can keep track of what the program is doing.  (For very fast resize
+operations, no progress bars may be displayed.)
 .TP
 .B \-P
 Print an estimate of the number of file system blocks in the file system
