--- a/misc/chattr.1.in
+++ b/misc/chattr.1.in
@@ -39,7 +39,7 @@ synchronous directory updates (D),
 extent format (e),
 case-insensitive directory lookups (F),
 immutable (i),
-data journalling (j),
+data journaling (j),
 don't compress (m),
 project hierarchy (P),
 secure deletion (s),
