--- a/misc/tune2fs.8.in
+++ b/misc/tune2fs.8.in
@@ -520,17 +520,17 @@ Disables 32-bit UIDs and GIDs.  This is for interoperability with
 older kernels which only store and expect 16-bit values.
 .TP
 .B journal_data
-When the file system is mounted with journalling enabled, all data
+When the file system is mounted with journaling enabled, all data
 (not just metadata) is committed into the journal prior to being written
 into the main file system.
 .TP
 .B journal_data_ordered
-When the file system is mounted with journalling enabled, all data is forced
+When the file system is mounted with journaling enabled, all data is forced
 directly out to the main file system prior to its metadata being committed
 to the journal.
 .TP
 .B journal_data_writeback
-When the file system is mounted with journalling enabled, data may be
+When the file system is mounted with journaling enabled, data may be
 written into the main file system after its metadata has been committed
 to the journal.  This may increase throughput, however, it may allow old
 data to appear in files after a crash and journal recovery.
