--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -4,4 +4,4 @@ upstream-tag='v%(version)s'
 debian-branch=debian/backports
 
 [buildpackage]
-builder = sbuild -A -s -v -d buster-backports
+builder = sbuild -A -s -v -d bullseye-backports
