--- a/configure.ac
+++ b/configure.ac
@@ -587,6 +587,13 @@ AC_SUBST(PROFILED_LIBBLKID)
 AC_SUBST(DEPPROFILED_LIBBLKID)
 AC_SUBST(BLKID_CMT)
 dnl
+dnl
+dnl
+PKG_CHECK_MODULES([ARCHIVE], [libarchive], HAVE_ARCHIVE=yes, HAVE_ARCHIVE=no)
+AC_SUBST(ARCHIVE_LIBS)
+AC_SUBST(ARCHIVE_CFLAGS)
+AC_SUBST(HAVE_ARCHIVE)
+dnl
 dnl handle --enable-subset
 dnl
 ALL_CMT=
